--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "php.validate.executablePath": "/Applications/XAMPP/xamppfiles/etc/php.ini"
 }
